--- a/src/components/MessageField/scss/style.scss
+++ b/src/components/MessageField/scss/style.scss
@@ -1,7 +1,22 @@
 .msgField {
   background-color: #41007d;
-  padding: 50px;
+  //padding: 50px;
   border-radius: 15px;
+  //height: 50%;
+  width: 100%;
+  overflow-y: scroll;
+  max-height: 500px;
+  min-height: 200px;
+  padding: 20px;
+  margin-bottom: 20px;
+
+  .chatField {
+    width: 450px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
 
   .controls {
 
